# valkey-timeseries

./: Cargo.toml  build.sh
.cargo/: config.toml
docs/: COMMANDS.md  overview.md
docs/commands/: ts.add.md  ts.addbulk.md  ts.alter.md  ts.card.md  ts.create.md  ts.createrule.md  ts.decrby.md  ts.del.md  ts.deleterule.md  ts.get.md  ts.incrby.md  ts.info.md  ts.join.md  ts.labelnames.md  ts.labelstats.md  ts.labelvalues.md  ts.madd.md  ts.mdel.md  ts.mget.md  ts.mrange.md  ts.mrevrange.md  ts.queryindex.md  ts.range.md  ts.revrange.md
docs/topics/: timeseries-overview.md
src/: error_consts.rs  server_events.rs
src/aggregators/: handlers.rs  iterator.rs  mod.rs
src/commands/: arg_parse.rs  info.rs  join.rs  mget.rs  mrange.rs  range.rs
src/common/: constants.rs  types.rs
src/fanout/request/: mod.rs  mrange.rs  request_generated.rs  response_generated.rs  serialization.rs  series_chunk.rs
src/series/: background_tasks.rs  guard.rs  mod.rs  mrange.rs  range_utils.rs  series_data_type.rs  time_series.rs  time_series_tests.rs  timestamp_range.rs  utils.rs
src/series/chunks/: utils.rs
src/series/chunks/gorilla/: buffered_writer.rs  gorilla_chunk.rs  gorilla_encoder.rs
src/series/chunks/pco/: pco_utils.rs
src/series/index/: mod.rs  postings.rs  postings_query_tests.rs  querier.rs  timeseries_index.rs
tests/: test_timeseries_info.py  test_timeseries_madd.py  test_timeseries_mrange.py  test_timeseries_range.py  test_timeseries_single.py  test_ts_queryindex2.py  ts_server_events.py
